@@ -59,11 +59,8 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonMappingException;
 
 import java.io.IOException;
-import java.util.AbstractMap.SimpleImmutableEntry;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -79,6 +76,7 @@ import java.util.Set;
 import java.util.TreeSet;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import joptsimple.OptionSpec;
 
@@ -110,13 +108,13 @@ public class ReassignPartitionsCommand {
      */
     static final int EARLIEST_TOPICS_JSON_VERSION = 1;
 
-    static final List<String> BROKER_LEVEL_THROTTLES = Arrays.asList(
+    static final List<String> BROKER_LEVEL_THROTTLES = List.of(
             QuotaConfig.LEADER_REPLICATION_THROTTLED_RATE_CONFIG,
             QuotaConfig.FOLLOWER_REPLICATION_THROTTLED_RATE_CONFIG,
             QuotaConfig.REPLICA_ALTER_LOG_DIRS_IO_MAX_BYTES_PER_SECOND_CONFIG
     );
 
-    private static final List<String> TOPIC_LEVEL_THROTTLES = Arrays.asList(
+    private static final List<String> TOPIC_LEVEL_THROTTLES = List.of(
             QuotaConfig.LEADER_REPLICATION_THROTTLED_REPLICAS_CONFIG,
             QuotaConfig.FOLLOWER_REPLICATION_THROTTLED_REPLICAS_CONFIG
     );
@@ -328,15 +326,15 @@ public class ReassignPartitionsCommand {
         List<Entry<TopicPartition, PartitionReassignmentState>> foundResults = foundReassignments.stream().map(e -> {
             TopicPartition part = e.getKey();
             List<Integer> targetReplicas = e.getValue();
-            return new SimpleImmutableEntry<>(part,
+            return Map.entry(part,
                 new PartitionReassignmentState(
                     currentReassignments.get(part).replicas(),
                     targetReplicas,
                     false));
-        }).collect(Collectors.toList());
+        }).toList();
 
         Set<String> topicNamesToLookUp = notFoundReassignments.stream()
-            .map(e -> e.getKey())
+            .map(Entry::getKey)
             .filter(part -> !currentReassignments.containsKey(part))
             .map(TopicPartition::topic)
             .collect(Collectors.toSet());
@@ -351,12 +349,12 @@ public class ReassignPartitionsCommand {
 
             if (currentReassignments.containsKey(part)) {
                 PartitionReassignment reassignment = currentReassignments.get(part);
-                notFoundResults.add(new SimpleImmutableEntry<>(part, new PartitionReassignmentState(
+                notFoundResults.add(Map.entry(part, new PartitionReassignmentState(
                     reassignment.replicas(),
                     targetReplicas,
                     false)));
             } else {
-                notFoundResults.add(new SimpleImmutableEntry<>(part, topicDescriptionFutureToState(part.partition(),
+                notFoundResults.add(Map.entry(part, topicDescriptionFutureToState(part.partition(),
                     topicDescriptions.get(part.topic()), targetReplicas)));
             }
         }
@@ -365,7 +363,7 @@ public class ReassignPartitionsCommand {
         foundResults.forEach(e -> allResults.put(e.getKey(), e.getValue()));
         notFoundResults.forEach(e -> allResults.put(e.getKey(), e.getValue()));
 
-        return new SimpleImmutableEntry<>(allResults, !currentReassignments.isEmpty());
+        return Map.entry(allResults, !currentReassignments.isEmpty());
     }
 
     private static PartitionReassignmentState topicDescriptionFutureToState(int partition,
@@ -383,7 +381,7 @@ public class ReassignPartitionsCommand {
                 true);
         } catch (ExecutionException t) {
             if (t.getCause() instanceof UnknownTopicOrPartitionException)
-                return new PartitionReassignmentState(Collections.emptyList(), targetReplicas, true);
+                return new PartitionReassignmentState(List.of(), targetReplicas, true);
 
             throw t;
         }
@@ -408,7 +406,7 @@ public class ReassignPartitionsCommand {
     ) throws ExecutionException, InterruptedException {
         Map<TopicPartitionReplica, LogDirMoveState> moveStates = findLogDirMoveStates(adminClient, targetReassignments);
         System.out.println(replicaMoveStatesToString(moveStates));
-        return new SimpleImmutableEntry<>(moveStates, !moveStates.values().stream().allMatch(LogDirMoveState::done));
+        return Map.entry(moveStates, !moveStates.values().stream().allMatch(LogDirMoveState::done));
     }
 
     /**
@@ -571,10 +569,10 @@ public class ReassignPartitionsCommand {
         List<UsableBroker> usableBrokers = getBrokerMetadata(adminClient, brokersToReassign, enableRackAwareness);
         Map<TopicPartition, List<Integer>> proposedAssignments = calculateAssignment(currentAssignments, usableBrokers);
         System.out.printf("Current partition replica assignment%n%s%n%n",
-            formatAsReassignmentJson(currentAssignments, Collections.emptyMap()));
+            formatAsReassignmentJson(currentAssignments, Map.of()));
         System.out.printf("Proposed partition reassignment configuration%n%s%n",
-            formatAsReassignmentJson(proposedAssignments, Collections.emptyMap()));
-        return new SimpleImmutableEntry<>(proposedAssignments, currentAssignments);
+            formatAsReassignmentJson(proposedAssignments, Map.of()));
+        return Map.entry(proposedAssignments, currentAssignments);
     }
 
     /**
@@ -726,7 +724,7 @@ public class ReassignPartitionsCommand {
      */
     static Entry<List<Integer>, List<String>> parseGenerateAssignmentArgs(String reassignmentJson,
                                                                            String brokerList) throws JsonMappingException {
-        List<Integer> brokerListToReassign = Arrays.stream(brokerList.split(",")).map(Integer::parseInt).collect(Collectors.toList());
+        List<Integer> brokerListToReassign = Stream.of(brokerList.split(",")).map(Integer::parseInt).collect(Collectors.toList());
         Set<Integer> duplicateReassignments = ToolsUtils.duplicates(brokerListToReassign);
         if (!duplicateReassignments.isEmpty())
             throw new AdminCommandFailedException(String.format("Broker list contains duplicate entries: %s", duplicateReassignments));
@@ -735,7 +733,7 @@ public class ReassignPartitionsCommand {
         if (!duplicateTopicsToReassign.isEmpty())
             throw new AdminCommandFailedException(String.format("List of topics to reassign contains duplicate entries: %s",
                 duplicateTopicsToReassign));
-        return new SimpleImmutableEntry<>(brokerListToReassign, topicsToReassign);
+        return Map.entry(brokerListToReassign, topicsToReassign);
     }
 
     /**
@@ -835,10 +833,9 @@ public class ReassignPartitionsCommand {
         do {
             Set<TopicPartitionReplica> completed = alterReplicaLogDirs(adminClient, pendingReplicas);
             if (!completed.isEmpty()) {
-                completed.stream().sorted(ReassignPartitionsCommand::compareTopicPartitionReplicas).forEach(replica -> {
+                completed.stream().sorted(ReassignPartitionsCommand::compareTopicPartitionReplicas).forEach(replica ->
                     System.out.printf("Successfully started moving log directory to %s for replica %s-%s with broker %s %n",
-                        pendingReplicas.get(replica), replica.topic(), replica.partition(), replica.brokerId());
-                });
+                        pendingReplicas.get(replica), replica.topic(), replica.partition(), replica.brokerId()));
             }
             completed.forEach(pendingReplicas::remove);
             if (pendingReplicas.isEmpty()) {
@@ -932,7 +929,7 @@ public class ReassignPartitionsCommand {
             .collect(Collectors.toMap(Entry::getKey, Entry::getValue));
 
         return String.format("Current partition replica assignment%n%n%s%n%nSave this to use as the %s",
-            formatAsReassignmentJson(partitionsToBeReassigned, Collections.emptyMap()),
+            formatAsReassignmentJson(partitionsToBeReassigned, Map.of()),
             "--reassignment-json-file option during rollback");
     }
 
@@ -1223,7 +1220,8 @@ public class ReassignPartitionsCommand {
         if (partitionsToBeReassigned.stream().anyMatch(t -> t.getValue().isEmpty())) {
             throw new AdminCommandFailedException("Partition replica list cannot be empty");
         }
-        Set<TopicPartition> duplicateReassignedPartitions = ToolsUtils.duplicates(partitionsToBeReassigned.stream().map(t -> t.getKey()).collect(Collectors.toList()));
+        Set<TopicPartition> duplicateReassignedPartitions = ToolsUtils.duplicates(partitionsToBeReassigned.stream().map(
+            Entry::getKey).collect(Collectors.toList()));
         if (!duplicateReassignedPartitions.isEmpty()) {
             throw new AdminCommandFailedException(String.format(
                 "Partition reassignment contains duplicate topic partitions: %s",
@@ -1231,9 +1229,8 @@ public class ReassignPartitionsCommand {
             );
         }
         List<Entry<TopicPartition, Set<Integer>>> duplicateEntries = partitionsToBeReassigned.stream()
-            .map(t -> new SimpleImmutableEntry<>(t.getKey(), ToolsUtils.duplicates(t.getValue())))
-            .filter(t -> !t.getValue().isEmpty())
-            .collect(Collectors.toList());
+            .map(t -> Map.entry(t.getKey(), ToolsUtils.duplicates(t.getValue())))
+            .filter(t -> !t.getValue().isEmpty()).toList();
         if (!duplicateEntries.isEmpty()) {
             String duplicatesMsg = duplicateEntries.stream().map(t ->
                 String.format("%s contains multiple entries for %s",
@@ -1242,7 +1239,7 @@ public class ReassignPartitionsCommand {
             ).collect(Collectors.joining(". "));
             throw new AdminCommandFailedException(String.format("Partition replica lists may not contain duplicate entries: %s", duplicatesMsg));
         }
-        return new SimpleImmutableEntry<>(partitionsToBeReassigned.stream().collect(Collectors.toMap(t -> t.getKey(), t -> t.getValue())), replicaAssignment);
+        return Map.entry(partitionsToBeReassigned.stream().collect(Collectors.toMap(Entry::getKey, Entry::getValue)), replicaAssignment);
     }
 
     /**
@@ -1268,7 +1265,7 @@ public class ReassignPartitionsCommand {
 
         List<Entry<TopicPartition, List<Integer>>> targetParts = t0.getKey();
         Map<TopicPartitionReplica, String> targetReplicas = t0.getValue();
-        Set<TopicPartition> targetPartsSet = targetParts.stream().map(t -> t.getKey()).collect(Collectors.toSet());
+        Set<TopicPartition> targetPartsSet = targetParts.stream().map(Entry::getKey).collect(Collectors.toSet());
         Set<TopicPartition> curReassigningParts = new HashSet<>();
         adminClient.listPartitionReassignments(targetPartsSet).reassignments().get().forEach((part, reassignment) -> {
             if (!reassignment.addingReplicas().isEmpty() || !reassignment.removingReplicas().isEmpty())
@@ -1305,7 +1302,7 @@ public class ReassignPartitionsCommand {
         if (!preserveThrottles) {
             clearAllThrottles(adminClient, targetParts);
         }
-        return new SimpleImmutableEntry<>(curReassigningParts, curMovingParts.keySet());
+        return Map.entry(curReassigningParts, curMovingParts.keySet());
     }
 
     public static String formatAsReassignmentJson(Map<TopicPartition, List<Integer>> partitionsToBeReassigned,
@@ -1401,7 +1398,7 @@ public class ReassignPartitionsCommand {
                         if (newReplicas.size() != newLogDirs.size())
                             throw new AdminCommandFailedException("Size of replicas list " + newReplicas + " is different from " +
                                 "size of log dirs list " + newLogDirs + " for partition " + new TopicPartition(topic, partition));
-                        partitionAssignment.add(new SimpleImmutableEntry<>(new TopicPartition(topic, partition), newReplicas));
+                        partitionAssignment.add(Map.entry(new TopicPartition(topic, partition), newReplicas));
                         for (int i = 0; i < newLogDirs.size(); i++) {
                             Integer replica = newReplicas.get(i);
                             String logDir = newLogDirs.get(i);
@@ -1414,7 +1411,7 @@ public class ReassignPartitionsCommand {
                     }
                 }
 
-                return new SimpleImmutableEntry<>(partitionAssignment, replicaAssignment);
+                return Map.entry(partitionAssignment, replicaAssignment);
 
             default:
                 throw new AdminOperationException("Not supported version field value " + version);
@@ -1427,12 +1424,11 @@ public class ReassignPartitionsCommand {
         CommandLineUtils.maybePrintHelpOrVersion(opts, HELP_TEXT);
 
         // Determine which action we should perform.
-        List<OptionSpec<?>> validActions = Arrays.asList(opts.generateOpt, opts.executeOpt, opts.verifyOpt,
+        List<OptionSpec<?>> validActions = List.of(opts.generateOpt, opts.executeOpt, opts.verifyOpt,
             opts.cancelOpt, opts.listOpt);
 
         List<OptionSpec<?>> allActions = validActions.stream()
-            .filter(a -> opts.options.has(a))
-            .collect(Collectors.toList());
+            .filter(a -> opts.options.has(a)).toList();
 
         if (allActions.size() != 1) {
             CommandLineUtils.printUsageAndExit(opts.parser, String.format("Command must include exactly one action: %s",
@@ -1451,37 +1447,28 @@ public class ReassignPartitionsCommand {
         // Make sure that we have all the required arguments for our action.
         Map<OptionSpec<?>, List<OptionSpec<?>>> requiredArgs = new HashMap<>();
 
-        requiredArgs.put(opts.verifyOpt, Collections.singletonList(
-            opts.reassignmentJsonFileOpt
-        ));
-        requiredArgs.put(opts.generateOpt, Arrays.asList(
-            opts.topicsToMoveJsonFileOpt,
-            opts.brokerListOpt
-        ));
-        requiredArgs.put(opts.executeOpt, Collections.singletonList(
-            opts.reassignmentJsonFileOpt
-        ));
-        requiredArgs.put(opts.cancelOpt, Collections.singletonList(
-            opts.reassignmentJsonFileOpt
-        ));
-        requiredArgs.put(opts.listOpt, Collections.emptyList());
+        requiredArgs.put(opts.verifyOpt, List.of(opts.reassignmentJsonFileOpt));
+        requiredArgs.put(opts.generateOpt, List.of(opts.topicsToMoveJsonFileOpt, opts.brokerListOpt));
+        requiredArgs.put(opts.executeOpt, List.of(opts.reassignmentJsonFileOpt));
+        requiredArgs.put(opts.cancelOpt, List.of(opts.reassignmentJsonFileOpt));
+        requiredArgs.put(opts.listOpt, List.of());
 
         CommandLineUtils.checkRequiredArgs(opts.parser, opts.options, requiredArgs.get(action).toArray(new OptionSpec<?>[0]));
 
         Map<OptionSpec<?>, List<OptionSpec<?>>> permittedArgs = new HashMap<>();
 
-        permittedArgs.put(opts.verifyOpt, Arrays.asList(
+        permittedArgs.put(opts.verifyOpt, List.of(
             opts.bootstrapServerOpt,
             opts.commandConfigOpt,
             opts.preserveThrottlesOpt
         ));
-        permittedArgs.put(opts.generateOpt, Arrays.asList(
+        permittedArgs.put(opts.generateOpt, List.of(
             opts.bootstrapServerOpt,
             opts.brokerListOpt,
             opts.commandConfigOpt,
             opts.disableRackAware
         ));
-        permittedArgs.put(opts.executeOpt, Arrays.asList(
+        permittedArgs.put(opts.executeOpt, List.of(
             opts.additionalOpt,
             opts.bootstrapServerOpt,
             opts.commandConfigOpt,
@@ -1490,21 +1477,21 @@ public class ReassignPartitionsCommand {
             opts.timeoutOpt,
             opts.disallowReplicationFactorChangeOpt
         ));
-        permittedArgs.put(opts.cancelOpt, Arrays.asList(
+        permittedArgs.put(opts.cancelOpt, List.of(
             isBootstrapServer ? opts.bootstrapServerOpt : opts.bootstrapControllerOpt,
             opts.commandConfigOpt,
             opts.preserveThrottlesOpt,
             opts.timeoutOpt
         ));
-        permittedArgs.put(opts.listOpt, Arrays.asList(
+        permittedArgs.put(opts.listOpt, List.of(
             isBootstrapServer ? opts.bootstrapServerOpt : opts.bootstrapControllerOpt,
             opts.commandConfigOpt
         ));
 
         opts.options.specs().forEach(opt -> {
             if (!opt.equals(action) &&
-                !requiredArgs.getOrDefault(action, Collections.emptyList()).contains(opt) &&
-                !permittedArgs.getOrDefault(action, Collections.emptyList()).contains(opt)) {
+                !requiredArgs.getOrDefault(action, List.of()).contains(opt) &&
+                !permittedArgs.getOrDefault(action, List.of()).contains(opt)) {
                 CommandLineUtils.printUsageAndExit(opts.parser,
                     String.format("Option \"%s\" can't be used with action \"%s\"", opt, action));
             }
